--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.7",
     "ng-bootstrap": "^1.6.3",
+    "nodemailer": "^4.6.4",
     "rxjs": "^5.5.8",
     "typescript": "^2.4.2",
     "zone.js": "^0.8.20"
