--- a/client/package.json
+++ b/client/package.json
@@ -25,12 +25,14 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.4",
     "angular2-jwt": "^0.2.3",
     "core-js": "^2.5.4",
+    "html2canvas": "^1.0.0-alpha.12",
     "ng-bootstrap": "^1.6.3",
+    "pdfmake": "^0.1.36",
     "rxjs": "^5.5.8",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.3",
+    "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^5.2.9",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
