--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Modular camp app",
   "main": "index.js",
   "scripts": {
-    "start": "node --inspect index.js",
+    "start": "node index.js",
     "build": "cd client && ng build --prod"
   },
   "repository": {
